fix: resolve layout bug

--- a/src/presentation/pages/signup/signup-styles.scss
+++ b/src/presentation/pages/signup/signup-styles.scss
@@ -40,3 +40,10 @@
     }
   }
 }
+
+@media only screen and (max-width: 460px) {
+  .form {
+    width: 100%;
+    max-width: 300px;
+  }
+}
